--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@google/genai": "^1.9.0",
     "@google/generative-ai": "^0.24.1",
+    "@mui/material": "^7.2.0",
     "@tailwindcss/vite": "^4.1.11",
+    "mui": "^0.0.1",
     "razorpay": "^2.9.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
